--- a/.github/workflows/issuesOnRepos.yml
+++ b/.github/workflows/issuesOnRepos.yml
@@ -1,7 +1,7 @@
 name: Handle issues
 on: issues
 jobs:
-  output:
+  output-issue-events:
     runs-on: ubuntu-latest
     steps:
       - name: Output event details
